<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/nav_show_media"
          android:title="@string/nav_txt_show_media" android:checkable="true" android:enabled="true">
        <menu>
            <group android:checkableBehavior="all" android:id="@+id/group_media_types">
                <item
                        android:id="@+id/nav_pictures"
                        android:icon="@drawable/ic_photo_library_black_24dp"
                        android:title="@string/nav_txt_pictures"/>
                <item
                        android:id="@+id/nav_videos"
                        android:icon="@drawable/ic_video_library_black_24dp"
                        android:title="@string/nav_txt_videos"/>
                <item
                        android:id="@+id/nav_gifs"
                        android:icon="@drawable/ic_gif_black_24dp"
                        android:title="@string/nav_txt_gifs"/>
            </group>
        </menu>
    </item>

    <item android:id="@+id/nav_from_folders"
          android:title="@string/nav_txt_show_from_folders" android:enabled="true" android:checkable="true">
        <menu>
            <group android:checkableBehavior="all" android:id="@+id/group_folders">
                <item
                        android:id="@+id/nav_all_folders"
                        android:icon="@drawable/ic_folder_black_24dp"
                        android:title="@string/nav_txt_show_from_folders_all"/>
            </group>
        </menu>
    </item>

</menu>